--- a/srcs/libft/Makefile
+++ b/srcs/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lowatell <lowatell@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/20 13:23:46 by lowatell          #+#    #+#              #
-#    Updated: 2024/10/19 13:32:05 by lowatell         ###   ########.fr        #
+#    Updated: 2024/10/19 13:30:50 by lowatell         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,40 +15,43 @@ CFLAGS = -Wall -Wextra -Werror
 RM = rm -rf
 AR = ar rcs
 
-LIBFT = libft.a
-NAME = libftprintf.a
+NAME = libft.a
 
-SRC_DIR = srcs
-INC_DIR = inc
-LIBFT_DIR = $(addprefix $(SRC_DIR)/, libft)
-INCS = -I $(LIBFT_DIR) -I $(INC_DIR)
-AR_LIBFT = $(addprefix $(LIBFT_DIR)/, $(LIBFT))
+SRCS =  ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
+		ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c \
+		ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c \
+		ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c \
+		ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c \
+		ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c \
+		ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
+		ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
+		ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 
-SRCS =	ft_putptr.c ft_print_address.c ft_printf.c ft_putchar.c \
-		ft_putstr.c ft_putnbr.c ft_nbr_len.c
+OBJS = $(SRCS:.c=.o)
 
-LIBFT_SRCS = *.c
+BONUS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
+		ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
+		ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
 
-OBJS = $(addprefix $(SRC_DIR)/, $(SRCS:.c=.o))
-LIBFT_OBJS = $(addprefix $(LIBFT_DIR)/, $(LIBFT_SRCS:.c=.o))
+BONUS_OBJS = $(BONUS:.c=.o)
 
 %.o: %.c
-	@$(CC) $(CFLAGS) -c $< -o $@ $(INCS)
+	@$(CC) $(CFLAGS) -c $< -o $@ -I .
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@make bonus -C $(LIBFT_DIR)
-	@$(AR) $(NAME) $(OBJS) $(LIBFT_OBJS)
+	@$(AR) $(NAME) $(OBJS)
 
 clean:
-	@make clean -C $(LIBFT_DIR)
-	@$(RM) $(OBJS)
+	@$(RM) $(OBJS) $(BONUS_OBJS)
 
 fclean: clean
-	@$(RM) $(AR_LIBFT)
 	@$(RM) $(NAME)
 
 re: fclean all
+
+bonus: $(OBJS) $(BONUS_OBJS)
+	@$(AR) $(NAME) $(OBJS) $(BONUS_OBJS)
 
 .PHONY: all clean fclean re bonus
